# fidobulk

./: .gitignore  config.ini  docker-compose.yaml  favicon.icns  fidobulk.spec  makefile  pyproject.toml  readme.md  requirements.txt  ykbatch.py
.github/workflows/: python-windows-build.yml  windows-build.yml  windows-release.yml
app/: main.py  main.spec
app/gui/: main_window.py
app/lib/: api_client.py  device.py
backend/: app.py
entraid_mock/: .env  Dockerfile  auth.js  graphql.js  package.json  server.js
fidobulk/: fidobulk.spec  main.py  main.spec  requirements.txt
fidobulk/gui/: main_window.py
fidobulk/lib/: api_client.py  auth.py  device.py  entra.py  users.py
mysql/: init.sql
