[project]
name = "fidokey-enrollment"
version = "0.0.1"
description = ""
authors = [
    { name = "Florian Dehn", email = "florian.dehn@cgi.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pyqt5 ==5.15.11",
    "requests >=2.32.3,<3.0.0",
    "yubikey-manager >=5.6.1,<6.0.0",
    "fido2",
    "pyinstaller",
    "pyscard",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "app" }
]